--- a/style.css
+++ b/style.css
@@ -1,76 +1,92 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background: white;
+  
+}
+
+h1 {
+  background-color: #F29D36;
+  color: #000000;
+  border: 100px;
+  border-color: azure;
+  font-style: italic;
+}
+
+.container {
+  width: 800px;
+  max-width: 80%;
+  margin: 20px; 
+}
+
 .quiz-section {
+  align-content: flex-end;
+  flex-direction: column;
 
 }
 
 
 #question-wrapper {
-
+  background-color: blue;
 }
 
 .start-section {
-
+  align-content: flex-end;
+  flex-direction: column;
 }
 
 .result-section {
-
+  align-content: flex-end;
+  flex-direction: column;
 }
 
 #questionNumberDisplay {
-
+ background-color: #F29D36;
+ height: 30px;
+ text-align: center; 
 }
 
 #startQuizButton {
-
+  justify-content: space-between;
+  align-content: flex-end;
+  flex-direction: column;
 }
 
-#finalScore {
-
+.finalScore {
+  background-color: #F29D36;
 }
 
-#result_msg {
-
+#scoreHeader {
+  background-color: #F29D36;
 }
-
 
 #question {
-
+  background-color: #F29D36;
+  text-align: center;
+  vertical-align: middle;
 }
 
 #choices {
 
+  color: #F29D36;
 }
 
-.option {
-
-}
-
-#correctAnswer{
-  
-}
-
-
-
-
-
-
-
-
-/* .start-section {
+#correctAnswerDisplay {
 
 }
 
-.quiz-section {
-
+.celly {
+  max-width: 80vw;
+  width: 800px;
 }
-
-.results-section {
-
-}
-
-#start-button {
-  
-}
-
-.question-and-score {
-
-} */
