--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
   border: 100px;
   border-color: azure;
   font-style: italic;
+  margin-bottom: 0px;
 }
 
 .container {
@@ -62,10 +63,11 @@ h1 {
 
 .final-score {
   background-color: #F29D36;
-}
+  }
 
 #scoreHeader {
   background-color: #F29D36;
+  text-align: center;
 }
 
 #question {
@@ -75,15 +77,27 @@ h1 {
 }
 
 #choices {
-
+  margin-left: 40px;
+  margin-bottom: auto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
   color: #F29D36;
 }
 
 #correctAnswerDisplay {
-
+  text-align: center;
 }
 
 .celly {
   max-width: 80vw;
   width: 800px;
+}
+
+#scoreDisplay {
+  padding-top: 20px;
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
 }
